# hidra2_prototype

./: .gitignore  README.md
dbtest/: CMakeLists.txt  Makefile  cmake_install.cmake  go.mod  go.sum
dbtest/common/: common.go  database.go  mongodb.go
dbtest/conf/: conf.go  conf.yaml
dbtest/consumer/: consumer.go
dbtest/database/: database.go  mongodb.go
dbtest/producer/: hidra2_producer.go  producer.go
